Debuggage du lecteur